# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: emails.py
env/: environment.py  models.py
server/: app.py
tasks/: graders.py
